// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InternalLink renders an internal link correctly 1`] = `
<div>
  <a
    class=""
    href="/test"
  >
    testText
  </a>
</div>
`;

exports[`InternalLink renders an internal link with a title 1`] = `
<div>
  <a
    class=""
    href="/test"
    title="testTitle"
  >
    testText
  </a>
</div>
`;

exports[`InternalLink renders an internal link with additional className 1`] = `
<div>
  <a
    class="testClass"
    href="/test"
  >
    testText
  </a>
</div>
`;

exports[`InternalLink renders an internal link with an icon 1`] = `
<div>
  <a
    class=""
    href="/test"
  >
    BootstrapIconMock_Heart
     
    testText
  </a>
</div>
`;

exports[`InternalLink renders an internal link with an id 1`] = `
<div>
  <a
    class=""
    href="/test"
    id="testId"
  >
    testText
  </a>
</div>
`;
